# distributed-toys

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: distributed-systems.md  hw1.md  hw2.md
labrpc/: Cargo.toml
labrpc/src/: macros.rs  network.rs  server.rs
map-reduce/: Cargo.toml  README.md  test.sh
map-reduce/src/: lib.rs  master.rs  worker.rs
map-reduce/src/app/: wc.rs
map-reduce/tests/: tests.rs
paxos/: Cargo.toml
paxos/labrpc/: Cargo.toml
paxos/labrpc/examples/: simple.rs
paxos/labrpc/src/: client.rs  cluster.rs  lib.rs  macros.rs  network.rs  server.rs
paxos/paxos/: Cargo.toml
paxos/paxos-basic/: Cargo.toml
paxos/paxos-basic/src/: acceptor.rs  lib.rs  proposer.rs
paxos/paxos-basic/tests/: tests.rs
paxos/paxos/src/: acceptor.rs  lib.rs  persistor.rs  proposer.rs
paxos/paxos/tests/: tests.rs
paxos/paxoskv/src/: kv.rs  lib.rs
paxos/src/: acceptor.rs  lib.rs  persistor.rs  proposer.rs  tests.rs
paxoskv/: Cargo.toml
paxoskv/benches/: normal.rs
paxoskv/src/: client.rs  kv.rs  lib.rs  tests.rs
