[package]
name = "map-reduce"
version = "0.1.0"
authors = ["Hongqin Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
futures = "0.3"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0" }
serde_json = "1.0"
tokio = { version = "0.3", features = ["full"] }
tarpc = {  git = "https://github.com/google/tarpc", features = ["full"] }
atomicwrites = "0.2.5"
rand = "0.7.3"
