[package]
name = "paxoskv"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paxos = { path = "../paxos"}
labrpc = { path = "../labrpc"}
log = "0.4.0"
env_logger = "0.8.2"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.0"
rocksdb = "0.15.0"

[dev-dependencies]
tempfile = "3.0.7"
criterion = "0.3"

[[bench]]
name = "normal"
harness = false