[package]
name = "labrpc"
version = "0.1.0"
authors = ["Adam Wright <adam.austin.wright@gmail.com>", "Tim Kuehn <timothy.j.kuehn@gmail.com>", "Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.0"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.3.6", features = ["full"] }
futures = "0.3.5"

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.54", features = ["full", "fold"] }

