[package]
name = "paxos-basic"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
anyhow = "1.0"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
labrpc = { path = "../labrpc"}

[dev-dependencies]
tempfile = "3.0.7"
rand = "0.8.0"
